// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`The API routing process should setup the routes correctly 1`] = `
[MockFunction] {
  "calls": Array [
    Array [
      "email:smtp",
    ],
    Array [
      "email:display:server",
    ],
    Array [
      "email:display:sender",
    ],
  ],
  "results": Array [
    Object {
      "type": "return",
      "value": "email:smtp",
    },
    Object {
      "type": "return",
      "value": "email:display:server",
    },
    Object {
      "type": "return",
      "value": "email:display:sender",
    },
  ],
}
`;

exports[`The API routing process should setup the routes correctly 2`] = `[MockFunction]`;

exports[`The API routing process should setup the routes correctly 3`] = `
[MockFunction] {
  "calls": Array [
    Array [],
  ],
  "results": Array [
    Object {
      "type": "return",
      "value": undefined,
    },
  ],
}
`;

exports[`The API routing process should setup the routes correctly 4`] = `
[MockFunction] {
  "calls": Array [
    Array [
      mockConstructor {},
      "email:smtp",
      "email:display:server",
      "email:display:sender",
    ],
  ],
  "results": Array [
    Object {
      "type": "return",
      "value": undefined,
    },
  ],
}
`;

exports[`The API routing process should setup the routes correctly 5`] = `
[MockFunction] {
  "calls": Array [
    Array [
      Object {
        "name": "Dummy DB",
      },
    ],
  ],
  "results": Array [
    Object {
      "type": "return",
      "value": undefined,
    },
  ],
}
`;

exports[`The API routing process should setup the routes correctly 6`] = `
[MockFunction] {
  "calls": Array [
    Array [],
  ],
  "results": Array [
    Object {
      "type": "return",
      "value": undefined,
    },
  ],
}
`;

exports[`The API routing process should setup the routes correctly 7`] = `
[MockFunction] {
  "calls": Array [
    Array [
      "/verify/:token",
      [Function],
      [Function],
    ],
  ],
  "results": Array [
    Object {
      "type": "return",
      "value": undefined,
    },
  ],
}
`;

exports[`The API routing process should setup the routes correctly 8`] = `
[MockFunction] {
  "calls": Array [
    Array [
      "/roll",
      [Function],
      [Function],
      [Function],
    ],
    Array [
      "/register",
      [Function],
      [Function],
    ],
    Array [
      "/register/:token",
      [Function],
    ],
    Array [
      "/unregister",
      [Function],
      [Function],
    ],
  ],
  "results": Array [
    Object {
      "type": "return",
      "value": undefined,
    },
    Object {
      "type": "return",
      "value": undefined,
    },
    Object {
      "type": "return",
      "value": undefined,
    },
    Object {
      "type": "return",
      "value": undefined,
    },
  ],
}
`;

exports[`The API routing process should setup the routes correctly 9`] = `
[MockFunction] {
  "calls": Array [
    Array [
      [Function],
    ],
  ],
  "results": Array [
    Object {
      "type": "return",
      "value": undefined,
    },
  ],
}
`;
